Add styling for fourth element
Add a light green background, a font size of 24px, and bold

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -7,3 +7,9 @@ p {
     color: blue;
     font-size: 36px;
 }
+
+#div2 {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
