--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,10 @@
-p {
+.odd {
     background-color: rgba(245, 66, 75, 0.5);
     font-family: 'Verdana', 'DejaVu Sans', 'sans-serif';
+}
+
+.third {
+    font-size: 24px;
 }
 
 #div1 {
@@ -9,7 +13,7 @@ p {
 }
 
 #div2 {
-    background-color: lightgreen;
+    background-color: rgba(66, 245, 120, 0.5);
     font-size: 24px;
     font-weight: bold;
 }
